--- a/sites/staticsites.io/index.html
+++ b/sites/staticsites.io/index.html
@@ -2,18 +2,113 @@
 
 <head>
     <title>Static Sites</title>
-    <style type="text/css">
-        body {
-            padding: 2em;
-            font-family: sans-serif;
-            line-height: 1.5em;
-        }
-    </style>
+    <link rel="stylesheet" media="all" href="/css/site.css" />
 </head>
 
 <body>
-    <h1>Static Sites</h1>
-    <p>Check the <strong>README</strong> file for usage.</p>
+    <div id="header">
+        <h1>Static Sites</h1>
+        <div><strong>K Cartlidge</strong></div>
+    </div>
+
+    <div id="main">
+
+        <h2>How Static Sites can help</h2>
+        <ul>
+            <li>
+                Run <strong>all</strong> your static <strong>websites</strong> on a <strong>single port</strong> with just
+                <strong>one server</strong>.
+            </li>
+            <li>
+                Have your sites running <strong>HTTPS</strong> with absolutely <strong>zero configuration</strong> needed.
+            </li>
+            <li>
+                <strong>No need</strong> for a traditional <strong>web server</strong> deploy, meaning <strong>tiny resource</strong>                usage.
+            </li>
+            <li>
+                <strong>Production ready</strong> with a <strong>single file</strong> deployment and <strong>great performance</strong>.
+            </li>
+            <li>
+                <strong>Open source</strong> codebase for peace of mind:
+                <a href="https://github.com/kcartlidge/StaticSites" target="_blank">
+                    view the code on my GitHub.
+                </a>
+            </li>
+        </ul>
+
+        <h2>Installing Static Sites</h2>
+        <p>
+            Whether you are wanting to run on your local machine or a server/cloud instance makes no difference. Follow the steps below
+            to get started.
+        </p>
+        <h3>Download the relevant version</h3>
+        <ul>
+            <li><a href="/builds/macos/StaticSites">Download the Mac OS version</a></li>
+            <li><a href="/builds/linux/StaticSites">Download the Linux version</a></li>
+            <li><a href="/builds/windows/StaticSites.exe">Download the Windows version</a></li>
+        </ul>
+        <h3>Check the dependencies and install it</h3>
+        <p>
+            <em>There are no dependencies. There is no installation needed.</em><br/> Just drop the download into a suitable
+            folder and it is ready to run.
+        </p>
+
+        <h2>Running Static Sites</h2>
+        <p>
+            Create a <code>sites.ini</code> file alongside the application. Run the following, replacing <code>example.com</code>            with your site's domain:
+        </p>
+        <code>
+            cd &lt;download-folder&gt;<br/>
+            echo "example.com = example.com" > sites.ini<br/>
+        </code>
+        <p>
+            Copy your static site into place in a folder alongside the downloaded application, named as per the domain. You can then
+            run the server:
+        </p>
+        <code>
+            ./StaticSites -local example.com -sites sites.ini -port 8000
+        </code>
+        <p>
+            This will launch <em>all</em> sites listed in the <code>sites.ini</code> file on port 8000 (which is the default,
+            but shown here for completeness). The sites will all start responding to requests to their domain name provided
+            of course that your DNS routes it in.
+        </p>
+        <p>
+            The <code>local</code> parameter allows you to nominate a site to run as <code>localhost</code> so there is no
+            need to set the DNS or do any workarounds when you want to run things locally.
+        </p>
+
+        <h3>Serving using HTTPS (green padlock)</h3>
+        <p>
+            Just set the port to 443, which is the standard for HTTPS. Static Sites will handle obtaining any certificates, caching them,
+            and renewing them (for all the sites).
+        </p>
+        <p>
+            The first time a site is hit there may be a slight delay whilst certificates are obtained, but subsequent hits will automatically
+            use the cached version and not be subject to that brief pause.
+        </p>
+
+        <h2>Things to note</h2>
+        <ul>
+            <li>
+                The site folders as specified in the <code>sites.ini</code> file should either be relative to the folder
+                you launch the server from, or fixed to your home folder (eg <code>~/sites</code>), or absolute paths that
+                will work from anywhere.
+            </li>
+            <li>
+                The number of sites you can serve is limited by the number of host names LetsEncrypt will allow in their certificates (around
+                100).
+            </li>
+        </ul>
+
+        <div id="footer">
+            <p>
+                <strong>Simplicity</strong> is the driving force. You get configuration free serving of all your static sites
+                using HTTPS with the smallest effort possible from a self-hosted facility. Requests for things such as Markdown
+                processing, folder listings and so forth are beyond that scope.
+            </p>
+        </div>
+    </div>
 </body>
 
 </html>
