--- a/sites/staticsites.io/index.html
+++ b/sites/staticsites.io/index.html
@@ -8,19 +8,19 @@
 <body>
     <div id="header">
         <h1>Static Sites</h1>
-        <div><strong>K Cartlidge</strong></div>
+        <div>K Cartlidge</div>
     </div>
 
     <div id="main">
 
-        <h2>How Static Sites can help</h2>
+        <h2>About Static Sites</h2>
         <ul>
             <li>
                 Run <strong>all</strong> your static <strong>websites</strong> on a <strong>single port</strong> with just
                 <strong>one server</strong>.
             </li>
             <li>
-                Have your sites running <strong>HTTPS</strong> with absolutely <strong>zero configuration</strong> needed.
+                Have your sites running <strong>HTTPS</strong> with absolutely <strong>zero configuration</strong>.
             </li>
             <li>
                 <strong>No need</strong> for a traditional <strong>web server</strong> deploy, meaning <strong>tiny resource</strong>                usage.
@@ -36,7 +36,7 @@
             </li>
         </ul>
 
-        <h2>Installing Static Sites</h2>
+        <h2>Installing</h2>
         <p>
             Whether you are wanting to run on your local machine or a server/cloud instance makes no difference. Follow the steps below
             to get started.
@@ -53,51 +53,77 @@
             folder and it is ready to run.
         </p>
 
-        <h2>Running Static Sites</h2>
+        <h2>Running</h2>
         <p>
-            Create a <code>sites.ini</code> file alongside the application. Run the following, replacing <code>example.com</code>            with your site's domain:
+            Create a <code>sites.ini</code> file alongside the application containing something like the following, replacing
+            <code>example.com</code> etc with your site domains and folders:
         </p>
-        <code>
-            cd &lt;download-folder&gt;<br/>
-            echo "example.com = example.com" > sites.ini<br/>
-        </code>
+        <pre><code>example.com = /home/karl/my-sites/example.com
+example2.com = /home/karl/my-sites/example-2.com</code></pre>
         <p>
-            Copy your static site into place in a folder alongside the downloaded application, named as per the domain. You can then
-            run the server:
+            Copy your static site(s) into place in folders alongside the downloaded application, named as per the domains. The folder
+            tree should look something like this:
         </p>
-        <code>
-            ./StaticSites -local example.com -sites sites.ini -port 8000
-        </code>
+        <pre><code>/home/karl/my-sites
+    StaticSites
+    sites.ini
+    /example.com
+        index.html
+    /example-2.com
+        index.html</code></pre>
         <p>
-            This will launch <em>all</em> sites listed in the <code>sites.ini</code> file on port 8000 (which is the default,
-            but shown here for completeness). The sites will all start responding to requests to their domain name provided
-            of course that your DNS routes it in.
+            You can then run the server:
+        </p>
+        <pre><code>cd /home/karl/my-sites
+./StaticSites -sites sites.ini -port 8000 -local example.com</code></pre>
+        <p>
+            This will launch <em>all</em> sites listed in the <code>sites.ini</code> file on port <code>8000</code> (which
+            is the default anyway, but shown here for completeness). The sites will all start responding to requests to their
+            domain name provided of course that your DNS routes it in.
         </p>
         <p>
-            The <code>local</code> parameter allows you to nominate a site to run as <code>localhost</code> so there is no
-            need to set the DNS or do any workarounds when you want to run things locally.
+            Don't expect to see the sites at <code>localhost</code> by default. The <code>local</code> parameter allows you
+            to nominate one site to run as <code>localhost</code> so there is no need to set the DNS or do any workarounds
+            when you want to work on it locally.
         </p>
 
         <h3>Serving using HTTPS (green padlock)</h3>
         <p>
-            Just set the port to 443, which is the standard for HTTPS. Static Sites will handle obtaining any certificates, caching them,
-            and renewing them (for all the sites).
+            Just set the port to <code>443</code>, which is the standard for HTTPS. Static Sites will handle obtaining any
+            certificates, caching them, and renewing them (for all the sites).
         </p>
         <p>
-            The first time a site is hit there may be a slight delay whilst certificates are obtained, but subsequent hits will automatically
-            use the cached version and not be subject to that brief pause.
+            The first time a site is hit there may be a slight delay whilst the certificate is updated, but subsequent hits to that site
+            will automatically use the cached version and not be subject to that brief pause.
         </p>
 
-        <h2>Things to note</h2>
+        <h2>Notes</h2>
         <ul>
             <li>
-                The site folders as specified in the <code>sites.ini</code> file should either be relative to the folder
-                you launch the server from, or fixed to your home folder (eg <code>~/sites</code>), or absolute paths that
-                will work from anywhere.
+                Changing the <code>sites.ini</code> file requires a StaticSites restart. Changing the <em>content</em> of
+                a site folder <em>does not</em>.
+            </li>
+            <li>
+                The site domains on the left in the <code>sites.ini</code> file should be the complete domain name, including
+                subdomain, but without any protocol, like <code>example.com</code> or <code>blog.kcartlidge.com</code>.
+            </li>
+            <li>
+                The site folders on the right in the <code>sites.ini</code> file should either be relative to the folder
+                you launch the server from (<code>./sites</code>), fixed to your home folder (<code>~/sites</code>), or absolute
+                paths (<code>/home/karl/sites</code>) that will work from anywhere. This will matter hugely if you have the
+                server launch automatically and it runs under a different user, as the current directory and the home folder
+                will probably change from when run manually.
             </li>
             <li>
                 The number of sites you can serve is limited by the number of host names LetsEncrypt will allow in their certificates (around
-                100).
+                100), as a single certificate is maintained for all the domains. There are also [rate limits applied by LetsEncrypt
+                for certificate issuance](https://letsencrypt.org/docs/rate-limits/), but certificates are only requested
+                when port <code>443</code> is used so simply avoid that port until ready.
+            </li>
+            <li>
+                No caching is currently implemented. Static sites are extremely light on resource usage, and the Static Sites server itself
+                hugely lighter than full fledged traditional web servers, so performance should not be an issue. If it is,
+                static sites are also prime candidates for services like <em>CloudFlare</em> or equivalent.
             </li>
         </ul>
 
