--- a/sites/staticsites.io/index.html
+++ b/sites/staticsites.io/index.html
@@ -1,6 +1,19 @@
 <html>
 
 <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name='author' content='K Cartlidge' />
+    <meta name='keywords' content='static sites,secure,https,server' />
+    <meta name='description' content='Run multiple static sites on a single port with automated HTTPS.' />
+
+    <link rel='icon' href='/favicon.ico' />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="shortcut icon" href="/favicon.ico">
+
     <title>Static Sites</title>
     <link rel="stylesheet" media="all" href="/css/site.css" />
 </head>
